# cpp-raytracer

./: .gitignore  CMakeLists.txt  FeatureList.txt
Code/: boundingbox.h  bvhnode.h  camera.h  color.h  cylinder.h  image.h  main.cpp  material.h  pointlight.h  ray.h  renderer.cpp  scene.h  shape.h  sphere.h  triangle.h  utility.h  vec3.h
Helper scripts/: video.py
LLM-responses/: LLM-responses.json
Provided JSON files/: scene_phong_refractive.json  scene_phong_refractive_textured.json  simple_phong_binary.json  simple_phong_objtest.json  simple_phong_textured.json
TestSuite/: image_binary.ppm
Textures/: Checkerboard.PPM  checkerboard_test.ppm  fourteen.ppm  grass.ppm
Textures/32tex/: BIGLEAVES.ppm  LAVA.ppm  RAPIDS.ppm  SAND.ppm  SANDMARKS.ppm  SNOW.ppm  TALLGRASS.ppm  TINYLEAVES.ppm  WATER.ppm
Textures/64tex/: bricks.ppm  gold0.ppm  lavaf1.ppm  stone.ppm  waterf1.ppm
